uhhh trying to fix the articles on mobile :3

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,7 @@ body {
 @media only screen and (max-width: 768px) {
   #articles > * {
     left: 1%;
+    width: 98%;
   }
 }
 
